Update on Overleaf.

--- a/refs.bib
+++ b/refs.bib
@@ -233,7 +233,7 @@
     title = {{matplotlib}},
     year = {2014},
     booktitle = {The Architecture of Open Source Applications},
-    author = {Hunter, John and Droettboom, Michael},
+    author = {Hunter, J. and Droettboom, M.},
     number = {Volume 2},
     volume = {2}
 }
@@ -544,7 +544,7 @@
 @misc{Driscoll2014,
     title = {{What is Primary Research and How do I get Started?}},
     year = {2014},
-    author = {Driscoll, Dana Lynn and Brizee, Allen}
+    author = {Driscoll, D. L. and Brizee, A.}
 }
 
 @inproceedings{Chakravarty2011,
@@ -1624,7 +1624,7 @@
     title = {{KLEE: Unassisted and Automatic Generation of High-Coverage Tests for Complex Systems Programs}},
     year = {2008},
     booktitle = {OSDI},
-    author = {Cadar, Cristian and Dunbar, Daniel and Engler, Dawson}
+    author = {Cadar, C. and Dunbar, D. and Engler, D.}
 }
 
 @misc{Guermonprez2012,
@@ -1652,7 +1652,7 @@
     title = {{From CUDA to OpenCL: Towards a performance-portable solution for multi-platform GPU programming}},
     year = {2012},
     journal = {Parallel Computing},
-    author = {Du, Peng and Weber, Rick and Luszczek, Piotr and Tomov, Stanimire and Peterson, Gregory and Dongarra, Jack},
+    author = {Du, P. and Weber, R. and Luszczek, P. and Tomov, S. and Peterson, G. and Dongarra, J.},
     number = {8},
     volume = {38},
     publisher = {Elsevier B.V.},
@@ -2881,7 +2881,7 @@
     title = {{Energy Efficiency and Performance Frontiers for Sparse Computations on GPU Supercomputers}},
     year = {2015},
     booktitle = {PPoPP},
-    author = {Anzt, Hartwig and Dongarra, Jack},
+    author = {Anzt, H. and Dongarra, J.},
     isbn = {9781450334044},
     keywords = {blocked sparse matrix vector, energy efficiency, gpu supercomputer, lobpcg, product, sparse eigensolver}
 }
@@ -3222,7 +3222,7 @@
     title = {{The Lazy Happens-Before Relation : Better Partial-Order Reduction for Systematic Concurrency Testing ∗}},
     year = {2015},
     booktitle = {PPoPP},
-    author = {Thomson, Paul and Donaldson, Alastair F},
+    author = {Thomson, P. and Donaldson, A.},
     isbn = {9781450332057},
     keywords = {partial-order reduction, systematic concurrency testing}
 }
@@ -3231,7 +3231,7 @@
     title = {{Towards Batched Linear Solvers on Accelerated Hardware Platforms}},
     year = {2015},
     booktitle = {PPoPP},
-    author = {Haidar, Azzam and Dong, Tingxing and Luszczek, Piotr and Tomov, Stanimire and Dongarra, Jack},
+    author = {Haidar, A. and Dong, T. and Luszczek, P. and Tomov, S. and Dongarra, J.},
     isbn = {9781450332057},
     keywords = {batched factorization, hard-, numerical linear algebra, numerical software libraries, one-sided factoriza-, ware accelerators}
 }
@@ -3475,7 +3475,7 @@
     title = {{Optimization for Performance and Energy for Batched Matrix Computations on GPUs Categories and Subject Descriptors}},
     year = {2015},
     booktitle = {PPoPP},
-    author = {Haidar, Azzam and Luszczek, Piotr and Dongarra, Jack},
+    author = {Haidar, A. and Luszczek, P. and Dongarra, J.},
     isbn = {9781450334075},
     keywords = {Batched factorization, hardware accelerators, numerical linear algebra, numerical software libraries, one-sided factorization algorithms}
 }
@@ -4254,7 +4254,7 @@
 @article{Drepper2007,
     title = {{What every programmer should know about memory}},
     year = {2007},
-    author = {Drepper, Ulrich},
+    author = {Drepper, U.},
     volume = {3},
     url = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.91.957&amp;rep=rep1&amp;type=pdf%5Cnhttp://diyhpl.us/~bryan/papers2/distributed/distributed-systems/what-every-programmer-should-know-about-memory.2007.pdf},
     doi = {10.1.1.91.957},
@@ -5138,7 +5138,7 @@
 @article{Downey2012,
     title = {{Think Complexity}},
     year = {2012},
-    author = {Downey, Allen B},
+    author = {Downey, A. B.},
     url = {http://books.google.com/books?id=SaV59o7K0GMC&pgis=1},
     isbn = {1449331696}
 }
@@ -5217,7 +5217,7 @@
     title = {{Moving Fast with Software Verification}},
     year = {2015},
     booktitle = {NASA Formal Methods},
-    author = {Calcagno, Cristiano and Distefano, Dino and Dubreil, Jeremy and Gabi, Dominik and Luca, Martino and Hearn, Peter O and Papakonstantinou, Irene}
+    author = {Calcagno, C. and Distefano, D. and Dubreil, J. and Gabi, D. and Luca, M. and Hearn, P. O. and Papakonstantinou, I.}
 }
 
 @inproceedings{He2014,
@@ -5513,7 +5513,7 @@
 @phdthesis{Dubach2005,
     title = {{Java Byte Code Synthesis for Reconfigurable Computing Platforms}},
     year = {2005},
-    author = {Dubach, Christophe}
+    author = {Dubach, C.}
 }
 
 @article{Bolz2003,
@@ -5905,7 +5905,7 @@
 @article{Remmelg2016,
     title = {{Performance Portable GPU Code Generation for Matrix Multiplication}},
     year = {2016},
-    author = {Remmelg, Toomas and Lutz, Thibaut and Steuwer, Michel and Dubac, Christophe},
+    author = {Remmelg, T. and Lutz, T. and Steuwer, M. and Dubach, C.},
     keywords = {code generation, gpu, high-level parallel programming, matrix multiplication, performance portability}
 }
 
@@ -7251,7 +7251,7 @@
     title = {{Auto-parallelisation of sieve C++ programs}},
     year = {2008},
     booktitle = {Euro-Par},
-    author = {Donaldson, Alastair and Riley, Colin and Lokhmotov, Anton and Cook, Andrew},
+    author = {Donaldson, A. and Riley, C. and Lokhmotov, A. and Cook, A.},
     isbn = {3540784721},
     doi = {10.1007/978-3-540-78474-6{\_}5},
     issn = {03029743}
@@ -8022,7 +8022,7 @@
 @inproceedings{Steuwer2016,
     title = {{Matrix Multiplication Beyond Auto-Tuning: Rewrite-based GPU Code Generation}},
     year = {2016},
-    author = {Steuwer, Michel and Remmelg, Toomas and Dubach, Christophe},
+    author = {Steuwer, M. and Remmelg, T. and Dubach, C.},
     isbn = {9781450344821}
 }
 
@@ -8854,7 +8854,7 @@
     title = {{Automatic Test Case Reduction for OpenCL}},
     year = {2016},
     booktitle = {IWOCL},
-    author = {Pflanzer, Moritz and Donaldson, Alastair F. and Lascu, Andrei},
+    author = {Pflanzer, M. and Donaldson, A. and Lascu, A.},
     isbn = {9781450343381},
     doi = {10.1145/2909437.2909439}
 }
@@ -9806,7 +9806,7 @@
     title = {{Metamorphic Testing for (Graphics) Compilers}},
     year = {2016},
     booktitle = {MET},
-    author = {Donaldson, A. F. and Lascu, A.},
+    author = {Donaldson, A. and Lascu, A.},
     isbn = {9781450341639},
     doi = {10.1145/2896971.2896978},
     keywords = {compiler testing, graphics, metamorphic testing, opengl}
@@ -11755,12 +11755,8 @@
 @article{Cadar2016a,
     title = {{Analysing the Program Analyser}},
     year = {2016},
-    journal = {ICSE: International Conference on Software Engineering Companion},
-    author = {Cadar, Cristian and Donaldson, Alastair F.},
-    pages = {765--768},
-    url = {http://dl.acm.org/citation.cfm?doid=2889160.2889206},
-    isbn = {9781450342056},
-    doi = {10.1145/2889160.2889206},
+    journal = {ICSE},
+    author = {Cadar, C. and Donaldson, A.},
     keywords = {cross-checking, program analysis, program generators, program transformations, testing}
 }
 
@@ -11805,6 +11801,29 @@
 @article{Problem,
     title = {{The Science of Brute Force}},
     author = {Problem, Pythagorean Triples}
+}
+
+@article{Alglave2015,
+    title = {{GPU Concurrency: Weak Behaviours and Programming Assumptions}},
+    year = {2015},
+    journal = {Proceedings of the Twentieth International Conference on Architectural Support for Programming Languages and Operating Systems - ASPLOS '15},
+    author = {Alglave, Jade and Batty, Mark and Donaldson, Alastair F. and Gopalakrishnan, Ganesh and Ketema, Jeroen and Poetzl, Daniel and Sorensen, Tyler and Wickerson, John},
+    number = {1},
+    pages = {577--591},
+    volume = {43},
+    url = {http://dl.acm.org/citation.cfm?id=2694344.2694391%5Cnhttp://dl.acm.org/citation.cfm?doid=2694344.2694391},
+    isbn = {9781450328357},
+    doi = {10.1145/2694344.2694391},
+    issn = {0163-5964},
+    pmid = {1571529},
+    keywords = {GPU, Nvidia PTX, formal model, litmus testing, memory consistency, openCL, test generation}
+}
+
+@misc{Leroy2013,
+    title = {{The CompCert C Verified Compiler}},
+    year = {2017},
+    booktitle = {INRIA Paris-Rocquencourt},
+    author = {Leroy, X.}
 }
 
 @article{McnallyFuzzingArt,
