--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -12,7 +12,7 @@ Both testing frameworks were used for 48 hours each. CLSmith was configured with
 
 \subsection{Experimental Setup}
 
-We replicated the experimental setup of our earlier tests, but this time allowing DeepSmith and CLSmith to run for 48 hours each.
+We replicated the experimental setup of our earlier tests, but this time allowing DeepSmith and CLSmith to run for 48 hours each. Both systems were ran with their default settings.
 
 
 \subsection{Results Overview}
@@ -36,6 +36,7 @@ Configs.\ $4$, $5$, $6$, and $7$ have a number CLSmith bc outcomes when optimiza
 
 \cc{Config.\ $7+$ has a lot of \textbf{bto}s. Why?}
 
+\cc{Configs.\ $4$, $6$ are the same driver on different hardware, and exhibit similar behavior}
 
 
 \subsection{Differential Tests}
