Update on Overleaf.

--- a/refs.bib
+++ b/refs.bib
@@ -11654,16 +11654,11 @@
     arxivId = {1707.04148}
 }
 
-@article{Le2015,
-    title = {{Finding deep compiler bugs via guided stochastic program mutation}},
+@inproceedings{Le2015,
+    title = {{Finding Deep Compiler Bugs via Guided Stochastic Program Mutation}},
     year = {2015},
-    journal = {Proceedings of the 2015 ACM SIGPLAN International Conference on Object-Oriented Programming, Systems, Languages, and Applications - OOPSLA 2015},
+    booktitle = {OOPSLA},
     author = {Le, Vu and Sun, Chengnian and Su, Zhendong},
-    pages = {386--399},
-    url = {http://dl.acm.org/citation.cfm?doid=2814270.2814319},
-    isbn = {9781450336895},
-    doi = {10.1145/2814270.2814319},
-    issn = {03621340},
     keywords = {automated testing, compiler testing, equivalent program variants, markov chain monte carlo}
 }
 
