--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -65,7 +65,7 @@ Table~\ref{tab:classifications} shows the results of applying voting heuristics 
 	\scriptsize %
 	\centering %
 	\input{build/tab/megatable}
-	\caption{Using voting heuristics to expose anomalous results from 48 hours of testing using CLSmith and DeepSmith. Columns denote wrong-code (w), build failure (\textbf{bf}), runtime crash (\textbf{c}), and timeout (\textbf{to}) classifications for CLSmith and DeepSmith, respectively.}
+	\caption{Using voting heuristics and automated filtering to expose anomalous results from 48 hours of testing using CLSmith and DeepSmith. Columns denote anomalous-output (ao), anomalous build failure (\textbf{abf}), anomalous runtime crash (\textbf{ac}), and anomalous timeout (\textbf{ato}) classifications for CLSmith and DeepSmith, respectively.}
 	\label{tab:classifications}
 \end{table*}
 
