--- a/sec/bugs.tex
+++ b/sec/bugs.tex
@@ -292,6 +292,9 @@ Figure~\ref{lst:xeon-phi-invalid-write}.
 
 In Configs.\ $1\pm$, an out-of-bounds reads and writes from one buffer argument will bleed into the next buffer.
 
+some compilers are more permissive than others - \emph{integer literal is too large}
+
+
 \newsavebox{\XeonPhiInvalidWrite}
 \begin{lrbox}{\XeonPhiInvalidWrite}
   \hspace{1.5em}
